--- a/src/styles/side-bar.scss
+++ b/src/styles/side-bar.scss
@@ -42,6 +42,7 @@ $sidebarPadding: 5px;
 
   .dgSideBarCollapsed & {
     opacity: 0;
+    pointer-events: none;
   }
 
   &::-webkit-scrollbar {
